--- a/PatinaBlazor/PatinaBlazor/Components/Account/Pages/RegisterConfirmation.razor
+++ b/PatinaBlazor/PatinaBlazor/Components/Account/Pages/RegisterConfirmation.razor
@@ -18,14 +18,19 @@
 
 @if (emailConfirmationLink is not null)
 {
-    <p>
-        This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-        Normally this would be emailed: <a href="@emailConfirmationLink">Click here to confirm your account</a>
-    </p>
+    <div class="alert alert-warning">
+        <h4>Development Mode</h4>
+        <p>Email sending is disabled in development. Please use this link to confirm your account:</p>
+        <p><a href="@emailConfirmationLink" class="btn btn-primary">Click here to confirm your account</a></p>
+    </div>
 }
 else
 {
-    <p>Please check your email to confirm your account.</p>
+    <div class="alert alert-info">
+        <h4>Check Your Email</h4>
+        <p>We've sent a confirmation email to <strong>@Email</strong>.</p>
+        <p>Please check your email (including your spam folder) and click the confirmation link to activate your account.</p>
+    </div>
 }
 
 @code {
@@ -54,15 +59,19 @@ else
             HttpContext.Response.StatusCode = StatusCodes.Status404NotFound;
             statusMessage = "Error finding user for unspecified email";
         }
-        else if (EmailSender is IdentityNoOpEmailSender)
+        else
         {
-            // Once you add a real email sender, you should remove this code that lets you confirm the account
-            var userId = await UserManager.GetUserIdAsync(user);
-            var code = await UserManager.GenerateEmailConfirmationTokenAsync(user);
-            code = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(code));
-            emailConfirmationLink = NavigationManager.GetUriWithQueryParameters(
-                NavigationManager.ToAbsoluteUri("Account/ConfirmEmail").AbsoluteUri,
-                new Dictionary<string, object?> { ["userId"] = userId, ["code"] = code, ["returnUrl"] = ReturnUrl });
+            // In development mode, show the confirmation link directly
+            // In production, emails will be sent via SMTP
+            if (HttpContext.RequestServices.GetRequiredService<IWebHostEnvironment>().IsDevelopment())
+            {
+                var userId = await UserManager.GetUserIdAsync(user);
+                var code = await UserManager.GenerateEmailConfirmationTokenAsync(user);
+                code = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(code));
+                emailConfirmationLink = NavigationManager.GetUriWithQueryParameters(
+                    NavigationManager.ToAbsoluteUri("Account/ConfirmEmail").AbsoluteUri,
+                    new Dictionary<string, object?> { ["userId"] = userId, ["code"] = code, ["returnUrl"] = ReturnUrl });
+            }
         }
     }
 }
