--- a/PatinaBlazor/PatinaBlazor/Components/Pages/EditCollectable.razor
+++ b/PatinaBlazor/PatinaBlazor/Components/Pages/EditCollectable.razor
@@ -382,7 +382,7 @@ else
 </div>
 
 @code {
-    [Parameter] public int Id { get; set; }
+    [Parameter] public Guid Id { get; set; }
 
     private Collectable? collectable;
     private CollectableEditModel editModel = new();
