Fixed broken edit link

--- a/PatinaBlazor/PatinaBlazor/Components/Pages/EditCollectable.razor
+++ b/PatinaBlazor/PatinaBlazor/Components/Pages/EditCollectable.razor
@@ -1,4 +1,4 @@
-@page "/edit-collectable/{id:int}"
+@page "/edit-collectable/{id:guid}"
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Identity
 @using PatinaBlazor.Data
